Added some JS functionality and some more CSS to page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 			<span id="title">Beanpole Labs</span>
 		</h1>
 		<div id="links">
-			<div class="container-3 home-link-left">
-				<a href="https://blog.beanpolelabs.com">BLOG</a>
+			<div id="games" class="container-4 home-link-left">
+				<span href="#" class="link">GAMES</span>
 			</div>
-			<div class="container-3 home-link-centre">
-				<a href="https://google.com">GAMES</a>
+			<div id="blog" class="container-4 home-link-centre">
+				<a href="https://blog.beanpolelabs.com" class="link">BLOG</a>
 			</div>
-			<div class="container-3 home-link-right">
-				<a href="#">CONTACT</a>
+			<div id="about" class="container-4 home-link-centre">
+				<span href="#" class="link">ABOUT</span>
 			</div>
+			<div id="contact" class="container-4 home-link-right">
+				<span href="#" class="link">CONTACT</span>
+			</div>
+		</div>
+		<div id="info">
+			<div id="game-div"></div>
 		</div>
 	</body>
 </html>
