Fixed up some CSS bizNass

--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
 			<span id="title">Beanpole Labs</span>
 		</h1>
 		<div id="links">
-			<div id="games" class="container-4 home-link-left">
-				<span href="#" class="link">GAMES</span>
-			</div>
-			<div id="blog" class="container-4 home-link-centre">
-				<a href="https://blog.beanpolelabs.com" class="link">BLOG</a>
-			</div>
-			<div id="about" class="container-4 home-link-centre">
-				<span href="#" class="link">ABOUT</span>
-			</div>
-			<div id="contact" class="container-4 home-link-right">
-				<span href="#" class="link">CONTACT</span>
-			</div>
+			<ul>
+				<li>
+					<span href="#" id="games" class="link">GAMES</span>
+				</li>
+				<li>
+					<a href="https://blog.beanpolelabs.com" id="blog" class="link">BLOG</a>
+				</li>
+				<li>
+					<span href="#" id="about" class="link">ABOUT</span>
+				</li>
+				<li>
+					<span href="#" id="contact" class="link">CONTACT</span>
+				</li>
+			</ul>
 		</div>
-		<div id="info">
-			<div id="game-div"></div>
+		<div class="outer-div">
+			<div class="inner-div">
+				<div class="container-3 arrow-div"><input type="image" src="images/arrow.png" class="arrow-img-left"></div>
+				<div id="info" class="container-3" ><img src="images/bucketsIcon.png" alt="Buckets Icon" class="slider"></div>
+				<div class="container-3 arrow-div"><input type="image" src="images/arrow.png" class="arrow-img-right"></div>
+			</div>
 		</div>
 	</body>
 </html>
