--- a/index.html
+++ b/index.html
@@ -29,9 +29,36 @@
 		</div>
 		<div class="outer-div">
 			<div class="inner-div">
-				<div class="container-3 arrow-div"><input type="image" src="images/arrow.png" class="arrow-img-left"></div>
-				<div id="info" class="container-3" ><img src="images/bucketsIcon.png" alt="Buckets Icon" class="slider"></div>
-				<div class="container-3 arrow-div"><input type="image" src="images/arrow.png" class="arrow-img-right"></div>
+				<div class="float-left arrow-div">
+					<input type="image" src="images/arrow.png" id="arrow-img-left">
+				</div>
+				<div id="info" class="float-left" >
+					<div class="hidden">
+						<span class="container-3">
+							<img src="images/bucketsIcon.png" alt="Buckets Icon" class="slider icon">
+						</span>
+						<span class="container-6">
+							<h2 class="float-left">Buckets</h2>
+							<p class="paragraph">
+								Some randomness dawgz! Some randomness dawgz! Some randomness dawgz!
+							</p>
+						</span>
+					</div>
+					<div class="hidden">
+						<span class="container-3">
+							<img src="images/bucketsIcon.png" alt="Buckets Icon" class="slider icon">
+						</span>
+						<span class="container-6">
+							<h2 class="float-left">Buckets</h2>
+							<p class="paragraph">
+								TINGZ 2 dawg!
+							</p>
+						</span>
+					</div>
+				</div>
+				<div class="float-left arrow-div">
+					<input type="image" src="images/arrow.png" id="arrow-img-right">
+				</div>
 			</div>
 		</div>
 	</body>
