Refactored and cleaned up some code

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
 					</li>
 					<li id="about-info" class="container-10 hidden">
 						<p class="container-5-alt centre fadeIn">
-							For any inquiries please contact: <a href="mailto:beanpolelabs@gmail.com" class="email">beanpolelabs@gmail.com</a>
+							Beanpole Labs is the brain child of Jeffrey Quach.  If you enjoy puzzle games check out <a href="#" class="clickable-link">Buckets</a> and <a href="#" class="clickable-link">Block Farm</a>!
+						</p>
+					</li>
+					<li id="contact-info" class="container-10 hidden">
+						<p class="container-5-alt centre fadeIn">
+							For any inquiries please contact: <a href="mailto:beanpolelabs@gmail.com" class="clickable-link">beanpolelabs@gmail.com</a>
 						</p>
 					</li>
 				</ul>
