Started work on Buckets press kit

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="https://fonts.googleapis.com/css?family=Carter+One|Open+Sans" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="styles/styles.css">
 		<script src="js/main.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<title>Beanpole Labs - Home</title>
 	</head>
-	<body>
+	<body class="background-index">
 		<img id="logo" class="img-center" src="images/logo.png" alt="logo" />
 		<h1>
 			<span id="title">Beanpole Labs</span>
 		</h1>
 		<div id="links">
-			<ul>
+			<ul class="menu-list">
 				<li>
 					<span href="#" id="games" class="link">GAMES</span>
 				</li>
@@ -29,7 +31,7 @@
 		</div>
 		<div class="container-10">
 			<div class="inner-div">
-				<ul>
+				<ul class="menu-list">
 					<li id="games-info" class="container-10 hidden">
 						<div class="float-left arrow-div fadeIn">
 							<input type="image" src="images/arrow.png" id="arrow-img-left">
@@ -40,7 +42,7 @@
 									<img src="images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
 								</span>
 								<span class="container-6">
-									<h2 class="float-left">Buckets</h2>
+									<h2 class="float-left"><a href="press/buckets.html">Buckets</a></h2>
 									<p class="paragraph">
 										An addictive puzzle game, simple to play, but hard to master!
 									</p>
