--- a/press/buckets.html
+++ b/press/buckets.html
@@ -39,7 +39,9 @@
 			<div class="container-6">
 				<!-- TRAILER GOES HERE! -->
 				<div class="container-8 centre">
-					<h3 class="sub-title float-left">Trailer</h3>
+					<div class="container-10">
+						<h3 class="sub-title float-left">Trailer</h3>
+					</div>
 					<iframe class="float-left" width="560" height="315" src="https://www.youtube.com/embed/_q3Xfdezh0c" frameborder="0" allowfullscreen></iframe>
 					<p class="fact paragraph padding-top">
 						Buckets is a challenging puzzling game testing your intellect and problem-solving skills.  Inspired by many recent puzzle game titles, Buckets provides you an opporunity to immerse yourself in simple gameplay, while tickling your urge to improve your skills!  Buckets offers a variety of themes to satisfy the preferences of many users.
@@ -47,6 +49,33 @@
 				</div>
 				<div class="container-8 centre">
 					<h3 class="sub-title float-left">Images</h3>
+					<div class="container-10">
+						<div class="container-5">
+							<img src="../images/screenshot1.png" alt="Screenshot" class="img-resize">
+						</div>
+						<div class="container-5">
+							<img src="../images/screenshot2.png" alt="Screenshot" class="img-resize">
+						</div>
+					</div>
+					<div class="container-10">
+						<div class="container-5">
+							<img src="../images/screenshot3.png" alt="Screenshot" class="img-resize">
+						</div>
+						<div class="container-5">
+							<img src="../images/screenshot4.png" alt="Screenshot" class="img-resize">
+						</div>
+					</div>
+				</div>
+				<div class="container-8 centre">
+					<h3 class="sub-title float-left">GIFs</h3>
+					<div class="container-10">
+						<div class="container-5">
+							<img src="../images/bucketsGif1.gif" alt="Buckets GIF">
+						</div>
+						<div class="container-5">
+							<img src="../images/bucketsGif2.gif" alt="Buckets GIF">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
