Undo gh-pages changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Beanpole Labs - Home</title>
 	</head>
 	<body class="background-index">
-		<img id="logo" class="img-center" src="/images/logo.png" alt="logo" />
+		<img id="logo" class="img-center" src="images/logo.png" alt="logo" />
 		<h1>
 			<span id="title">Beanpole Labs</span>
 		</h1>
@@ -34,12 +34,12 @@
 				<ul class="menu-list">
 					<li id="games-info" class="container-10 hidden">
 						<div class="float-left arrow-div fadeIn">
-							<input type="image" src="/images/arrow.png" id="arrow-img-left">
+							<input type="image" src="images/arrow.png" id="arrow-img-left">
 						</div>
 						<div id="info" class="float-left" >
 							<div class="slider-panel fadeIn">
 								<span class="container-3">
-									<img src="/images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
+									<img src="images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
 								</span>
 								<span class="container-6">
 									<h2 class="float-left"><a href="press/buckets.html">Buckets</a></h2>
@@ -48,17 +48,17 @@
 									</p>
 									<div class="container-8">
 										<div class="container-5">
-											<a href="#"><img src="/images/appleAppIcon.png" alt="iOS App Store"></a>
+											<a href="#"><img src="images/appleAppIcon.png" alt="iOS App Store"></a>
 										</div>
 										<div class="container-5">
-											<a href="#"><img src="/images/googleAppIcon.png" alt="Google Play Store"></a>
+											<a href="#"><img src="images/googleAppIcon.png" alt="Google Play Store"></a>
 										</div>
 									</div>
 								</span>
 							</div>
 							<div class="hidden">
 								<span class="container-3">
-									<img src="/images/blockFarmIcon.png" alt="Block Farm Icon" class="icon img-center">
+									<img src="images/blockFarmIcon.png" alt="Block Farm Icon" class="icon img-center">
 								</span>
 								<span class="container-6">
 									<h2 class="float-left">Block Farm</h2>
@@ -67,17 +67,17 @@
 									</p>
 									<div class="container-8">
 										<div class="container-5">
-											<a href="#"><img src="/images/appleAppIcon.png" alt="iOS App Store"></a>
+											<a href="#"><img src="images/appleAppIcon.png" alt="iOS App Store"></a>
 										</div>
 										<div class="container-5">
-											<a href="#"><img src="/images/googleAppIcon.png" alt="Google Play Store"></a>
+											<a href="#"><img src="images/googleAppIcon.png" alt="Google Play Store"></a>
 										</div>
 									</div>
 								</span>
 							</div>
 						</div>
 						<div class="float-left arrow-div fadeIn">
-							<input type="image" src="/images/arrow.png" id="arrow-img-right">
+							<input type="image" src="images/arrow.png" id="arrow-img-right">
 						</div>
 					</li>
 					<li id="about-info" class="container-10 hidden">
