--- a/press/buckets.html
+++ b/press/buckets.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Carter+One|Open+Sans" rel="stylesheet">
-		<link rel="stylesheet" href="/../styles/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="/../favicon.ico" />
+		<link rel="stylesheet" href="../styles/styles.css">
+		<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 		<title>Buckets - Press Kit</title>
 	</head>
 	<body class="background-buckets">
 		<div class="container-10">
 			<div class="container-3">
-				<img src="/../images/bucketsLogo.png" alt="Buckets Logo" id="game-logo" />
+				<img src="../images/bucketsLogo.png" alt="Buckets Logo" id="game-logo" />
 				<h3 class="sub-title left-padding">Fact Sheet</h3>
 				<ul class="fact-bullet-list">
 					<li class="fact">
@@ -32,7 +32,7 @@
 						<strong>Website: </strong><a href="https://beanpolelabs.com" class="clickable-link">beanpolelabs.com</a>
 					</li>
 					<li class="fact">
-						<strong>Icon: </strong><img src="/../images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
+						<strong>Icon: </strong><img src="../images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
 					</li>
 				</ul>
 			</div>
@@ -51,18 +51,18 @@
 					<h3 class="sub-title float-left">Images</h3>
 					<div class="container-10">
 						<div class="container-5">
-							<img src="/../images/screenshot1.png" alt="Screenshot" class="img-resize">
+							<img src="../images/screenshot1.png" alt="Screenshot" class="img-resize">
 						</div>
 						<div class="container-5">
-							<img src="/../images/screenshot2.png" alt="Screenshot" class="img-resize">
+							<img src="../images/screenshot2.png" alt="Screenshot" class="img-resize">
 						</div>
 					</div>
 					<div class="container-10">
 						<div class="container-5">
-							<img src="/../images/screenshot3.png" alt="Screenshot" class="img-resize">
+							<img src="../images/screenshot3.png" alt="Screenshot" class="img-resize">
 						</div>
 						<div class="container-5">
-							<img src="/../images/screenshot4.png" alt="Screenshot" class="img-resize">
+							<img src="../images/screenshot4.png" alt="Screenshot" class="img-resize">
 						</div>
 					</div>
 				</div>
@@ -70,10 +70,10 @@
 					<h3 class="sub-title float-left">GIFs</h3>
 					<div class="container-10">
 						<div class="container-5">
-							<img src="/../images/bucketsGif1.gif" alt="Buckets GIF">
+							<img src="../images/bucketsGif1.gif" alt="Buckets GIF">
 						</div>
 						<div class="container-5">
-							<img src="/../images/bucketsGif2.gif" alt="Buckets GIF">
+							<img src="../images/bucketsGif2.gif" alt="Buckets GIF">
 						</div>
 					</div>
 				</div>
