--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Open+Sans" rel="stylesheet">
-		<link rel="stylesheet" href="/styles/styles.css">
+		<link rel="stylesheet" href="styles/styles.css">
 		<script src="js/main.js"></script>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Beanpole Labs - Home</title>
