Fixed some naming issues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Open+Sans" rel="stylesheet">
-		<link rel="stylesheet" href="styles/styles.css">
+		<link rel="stylesheet" href="css/styles.css">
 		<script src="js/main.js"></script>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Beanpole Labs - Home</title>
@@ -16,16 +16,16 @@
 		<div id="links">
 			<ul class="menu-list">
 				<li>
-					<span href="#" id="games" class="link">GAMES</span>
+					<span id="games" class="link">GAMES</span>
 				</li>
 				<li>
 					<a href="https://blog.beanpolelabs.com" id="blog" class="link">BLOG</a>
 				</li>
 				<li>
-					<span href="#" id="about" class="link">ABOUT</span>
+					<span id="about" class="link">ABOUT</span>
 				</li>
 				<li>
-					<span href="#" id="contact" class="link">CONTACT</span>
+					<span id="contact" class="link">CONTACT</span>
 				</li>
 			</ul>
 		</div>
