--- a/press/buckets.html
+++ b/press/buckets.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Carter+One|Open+Sans" rel="stylesheet">
-		<link rel="stylesheet" href="../styles/styles.css">
+		<link rel="stylesheet" href="../css/styles.css">
 		<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 		<title>Buckets - Press Kit</title>
 	</head>
