Fixed up Buckets press kit page

--- a/press/buckets.html
+++ b/press/buckets.html
@@ -11,7 +11,7 @@
 		<div class="container-10">
 			<div class="container-3">
 				<img src="../images/bucketsLogo.png" alt="Buckets Logo" id="game-logo" />
-				<h3 class="sub-title left-padding">Fact Sheet</h3>
+				<h3 class="sub-title-white left-padding">Fact Sheet</h3>
 				<ul class="fact-bullet-list">
 					<li class="fact">
 						<strong>Developer: </strong>Beanpole Labs
@@ -26,13 +26,13 @@
 						<strong>Launch Date: </strong>Decemeber 20, 2016 
 					</li>
 					<li class="fact">
-						<strong>Contact: </strong><a href="mailto:beanpolelabs@gmail.com" class="clickable-link">beanpolelabs@gmail.com</a>
+						<strong>Contact: </strong><a href="mailto:beanpolelabs@gmail.com" class="clickable-link-light">beanpolelabs@gmail.com</a>
 					</li>
 					<li class="fact">
-						<strong>Website: </strong><a href="https://beanpolelabs.com" class="clickable-link">beanpolelabs.com</a>
+						<strong>Website: </strong><a href="https://beanpolelabs.com" class="clickable-link-light">beanpolelabs.com</a>
 					</li>
 					<li class="fact">
-						<strong>Icon: </strong><img src="../images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
+						<strong>Icon: </strong><img src="../images/bucketsIcon.png" alt="Buckets Icon" class="icon icon-left-shift">
 					</li>
 				</ul>
 			</div>
@@ -40,7 +40,7 @@
 				<!-- TRAILER GOES HERE! -->
 				<div class="container-8 centre">
 					<div class="container-10">
-						<h3 class="sub-title float-left">Trailer</h3>
+						<h3 class="sub-title-white float-left">Trailer</h3>
 					</div>
 					<iframe class="float-left" width="560" height="315" src="https://www.youtube.com/embed/2AHqTGh4vaA" frameborder="0" allowfullscreen></iframe>
 					<p class="fact paragraph padding-top">
@@ -48,7 +48,7 @@
 					</p>
 				</div>
 				<div class="container-8 centre">
-					<h3 class="sub-title float-left">Images</h3>
+					<h3 class="sub-title-white float-left">Images</h3>
 					<div class="container-10">
 						<div class="container-5">
 							<img src="../images/screenshot1.png" alt="Screenshot" class="img-resize">
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 				<div class="container-8 centre">
-					<h3 class="sub-title float-left">GIFs</h3>
+					<h3 class="sub-title-white float-left">GIFs</h3>
 					<div class="container-10">
 						<div class="container-5">
 							<img src="../images/bucketsGif1.gif" alt="Buckets GIF">
