Added clickable-link class to href for Buckets

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 									<img src="images/bucketsIcon.png" alt="Buckets Icon" class="icon img-center">
 								</span>
 								<span class="container-6">
-									<h2 class="float-left"><a href="press/buckets.html">Buckets</a></h2>
+									<h2 class="float-left"><a href="press/buckets.html" class="clickable-link">Buckets</a></h2>
 									<p class="paragraph">
 										An addictive puzzle game, simple to play, but hard to master!
 									</p>
