--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 									</p>
 									<div class="container-8">
 										<div class="container-5">
-											<a href="#"><img src="images/appleAppIcon.png" alt="iOS App Store"></a>
+											<a href="https://itunes.apple.com/us/app/buckets-a-puzzle-journey/id1180455700?ls=1&mt=8"><img src="images/appleAppIcon.png" alt="iOS App Store"></a>
 										</div>
 										<div class="container-5">
-											<a href="#"><img src="images/googleAppIcon.png" alt="Google Play Store"></a>
+											<a href="https://play.google.com/store/apps/details?id=com.beanpoleLabs.tileSlide"><img src="images/googleAppIcon.png" alt="Google Play Store"></a>
 										</div>
 									</div>
 								</span>
@@ -67,10 +67,10 @@
 									</p>
 									<div class="container-8">
 										<div class="container-5">
-											<a href="#"><img src="images/appleAppIcon.png" alt="iOS App Store"></a>
+											<a href="https://itunes.apple.com/us/app/block-farm/id1158734337?ls=1&mt=8"><img src="images/appleAppIcon.png" alt="iOS App Store"></a>
 										</div>
 										<div class="container-5">
-											<a href="#"><img src="images/googleAppIcon.png" alt="Google Play Store"></a>
+											<a href="https://play.google.com/store/apps/details?id=com.beanpoleLabs.blockFarm"><img src="images/googleAppIcon.png" alt="Google Play Store"></a>
 										</div>
 									</div>
 								</span>
